--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
-    --cor-fundo: #01080E;
-    --cor-principal: #0B0D20;
-    --cor-secundaria: #212333;
-    --cor-destaque: #2BDEFD;
-    --cor-texto: #D7F9FF;
+    --cor-fundo: #16022e;
+    --cor-principal: #470303;
+    --cor-secundaria: #300d2e;
+    --cor-destaque: #1d82e0;
+    --cor-texto: #b7c4c7;
 }
 
 body {
