--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --cor-fundo: #1a0f29;
-    --cor-principal: #560652;
-    --cor-secundaria: #300d2e;
+    --cor-principal: #2e3561;
+    --cor-secundaria: #62255f;
     --cor-destaque: #63297e;
     --cor-texto: #4d4b4b;
 }
