--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cor-principal: #2e3561;
     --cor-secundaria: #62255f;
     --cor-destaque: #63297e;
-    --cor-texto: #4d4b4b;
+    --cor-texto: #c56df5;
 }
 
 body {
