--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --cor-fundo: #1a0f29;
+    --cor-fundo: #362a46;
     --cor-principal: #2e3561;
-    --cor-secundaria: #62255f;
+    --cor-secundaria: #fb68f3;
     --cor-destaque: #63297e;
     --cor-texto: #c56df5;
 }
