--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --cor-fundo: #362a46;
-    --cor-principal: #2e3561;
-    --cor-secundaria: #fb68f3;
+    --cor-principal: #000000;
+    --cor-secundaria: #fb98f6;
     --cor-destaque: #63297e;
     --cor-texto: #c56df5;
 }
