--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --cor-fundo: #362a46;
-    --cor-principal: #000000;
+    --cor-fundo: #0a080d;
+    --cor-principal: #c147fe;
     --cor-secundaria: #fb98f6;
-    --cor-destaque: #63297e;
+    --cor-destaque: #535253;
     --cor-texto: #c56df5;
 }
 
