--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
     --cor-fundo: #0a080d;
-    --cor-principal: #c147fe;
+    --cor-principal: #696769;
     --cor-secundaria: #fb98f6;
-    --cor-destaque: #535253;
+    --cor-destaque: #66138c;
     --cor-texto: #c56df5;
 }
 
