--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cor-principal: #696769;
     --cor-secundaria: #fb98f6;
     --cor-destaque: #66138c;
-    --cor-texto: #c56df5;
+    --cor-texto: #9c9a9d;
 }
 
 body {
