--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --cor-fundo: #0a080d;
-    --cor-principal: #696769;
+    --cor-principal: #0d0c0d;
     --cor-secundaria: #fb98f6;
     --cor-destaque: #66138c;
     --cor-texto: #9c9a9d;
