--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
     --cor-fundo: #0a080d;
     --cor-principal: #0d0c0d;
-    --cor-secundaria: #fb98f6;
+    --cor-secundaria: #535253;
     --cor-destaque: #66138c;
-    --cor-texto: #9c9a9d;
+    --cor-texto: #cccacd;
 }
 
 body {
