--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-    --cor-fundo: #0a080d;
-    --cor-principal: #0d0c0d;
+    --cor-fundo: #06020c;
+    --cor-principal: #0a010a;
     --cor-secundaria: #535253;
     --cor-destaque: #66138c;
     --cor-texto: #cccacd;
